--- a/src/lib/colors.css
+++ b/src/lib/colors.css
@@ -2,6 +2,7 @@
     color: hsl(37, 87%, 61%);
     color: #e3e3e3;
     color: #c4c7c5;
+    color: #444746;
     background-color: #707274;
     background-color: #2d2e2f;
     background-color: rgb(40, 41, 42);
