--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -1,12 +1,12 @@
 /* https://fonts.google.com/specimen/Fira+Sans */
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap');
-/* https://fonts.google.com/specimen/Fira+Code */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
+/* https://fonts.google.com/specimen/Open+Sans */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
 :root {
 	/* =~= Theme Properties =~= */
-	--theme-font-family-base: 'Fira-Sans', system-ui;
-	--theme-font-family-heading: 'Fira-Sans', system-ui;
+	--theme-font-family-base: 'Open Sans', system-ui;
+	--theme-font-family-heading: 'Fira Sans', system-ui;
 	--theme-font-color-base: var(--color-surface-600);
 	--theme-font-color-dark: var(--color-surface-200);
 	--theme-rounded-base: 9999px;
