mobile layout adjustment, animation changes

--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -102,11 +102,11 @@
 }
 
 .faux-glass {
-	@apply bg-surface-500/20 backdrop-blur-lg text-surface-600-300-token
+	@apply bg-surface-800/30 backdrop-blur text-surface-900-50-token
 }
 
 .material-color-transition {
-	@apply transition-colors duration-300 ease-material-color
+	@apply transition-colors duration-300 ease-standard
 }
 
 .material-symbols-rounded {
