--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,2 +1,15 @@
-/*place global styles here */
-html, body { @apply h-full overflow-hidden; }
+/*Write your global styles here, in PostCSS syntax */
+html,
+body {
+	@apply h-full overflow-hidden;
+}
+
+/*
+.gradient-heading {
+	@apply bg-clip-text text-transparent box-decoration-clone bg-amber-logo bg-[size:500%] bg-[position:top_87%_left_30%];
+}
+
+.dark .gradient-heading {
+	@apply bg-clip-text text-transparent box-decoration-clone bg-amber-logo bg-[size:600%] bg-[position:top_57%_left_48%];
+}
+*/
