--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -3,14 +3,21 @@
 /* https://fonts.google.com/specimen/Open+Sans */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
+/*
+rounded-[14px] = border-radius 14px, central button
+rounded-xl = 0.75rem, buttons
+rounded-2xl = 1rem, container
+rounded-3xl = 1.5rem, card
+*/
+
 :root {
 	/* =~= Theme Properties =~= */
 	--theme-font-family-base: 'Open Sans', system-ui;
 	--theme-font-family-heading: 'Fira Sans', system-ui;
 	--theme-font-color-base: var(--color-surface-900);
 	--theme-font-color-dark: var(--color-surface-200);
-	--theme-rounded-base: 9999px;
-	--theme-rounded-container: 24px;
+	--theme-rounded-base: 0.75rem;
+	--theme-rounded-container: 1rem;
 	--theme-border-base: 3px;
 	/* =~= Theme On-X Colors =~= */
 	--on-primary: 0 0 0;
