--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,6 +3,31 @@ html,
 body {
 	@apply h-full overflow-hidden;
 }
+button {
+	font-weight: bold;
+}
+
+/*
+body {
+	background-image:
+		radial-gradient(circle at 20% 120%, hsla(37,86%,61%,0.36) 0px, transparent 50%),
+		radial-gradient(circle at 76% -20%, hsla(218,13%,53%,0.47) 0px, transparent 50%);
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.dark body {
+	background-image:
+		radial-gradient(circle at 76% -20%, hsla(37,86%,61%,0.2) 0px, transparent 50%),
+		radial-gradient(circle at 20% 120%, hsla(218,13%,53%,0.3) 0px, transparent 50%);
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+*/
 
 /*
 .gradient-heading {
