--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -1,5 +1,7 @@
 /* https://fonts.google.com/specimen/Fira+Sans */
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap');
+/* https://fonts.google.com/specimen/Fira+Code */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
 /* https://fonts.google.com/specimen/Open+Sans */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
